IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/25/12: Made Midas able to read files with DOS line endings on other systems.

1/19/12: Fixed problem with trying to do more than 50000 peaks in Findbeads3d.

1/19/12: In eTomo - PEET, setting nWeightGroup to 0 in the .prm file when the
'Weight groups' spinner is off in the dialog.(Bug# 1589)

1/18/12: In eTomo - PEET, defaulted low cutoff sigma.(Bug# 1588)

1/18/12: In eTomo - PEET, added a startup popup.(Bug# 1585)

1/18/12: In eTomo - PEET, avoiding the problems caused by entering a "." for
the PEET dataset directory.(Bug# 1584)

1/17/12: Added cygcheck back in to tomosnapshot.

1/9/12: Fixed tests for a view-number bug that made Ctfphaseflip fail with
one image per range.

1/4/12: In Ctfplotter, added defaults so some options aren't required, added
options for controlling the curve fitting, and added an option for saving
autofit results and exiting. 

1/3/12: In Etomo - PEET upgraded the Run tab.(Bug# 1571)

1/3/12: Add options to Ctfphaseflip to adjust for the shift of images during 
alignment.

1/3/12: In Ctfplotter, added ability to step the angular range up or down,
ability to fit automatically to a whole set of ranges, and an option to start
the program with automatic fitting.  Also switched frequency units to be
cycles/pixel going from 0 to 0.5.

12/24/11: Fixed test in simplex search routine that terminated searches with
only one variable very early, maybe terminated other searches a bit early.

12/20/11: IMOD_4-4-3
12/20/11: In eTomo - PEET, upgraded the Interations table.(Bug# 1570)

12/19/11: Programs Clonevolume and Clonemodel were added to allow multiple
copies of a rotated volume or model to be inserted into a tomogram or composed
into one model.

12/19/11: IMOD_4-3-4
12/19/11: Updated program list for hyperlinks in man page (In 4.3).

12/19/11: IMOD_4-3-3
12/19/11: Added options to Genhstplt for dividing by column and loading new